fix vertical alignment, arrow not triggering select, menu border

--- a/index.scss
+++ b/index.scss
@@ -8,12 +8,18 @@
   cursor: pointer;
   text-transform: none;
   text-align: left;
-  vertical-align: bottom;
+  vertical-align: middle;
   display: inline-block;
 
   min-width: 270px;
+}
 
-  &:after {
+.selectbox__selected {
+  color: hsl(134, 100%, 29%);
+  line-height: 40px;
+  padding: 0 10px;
+
+  .selectbox &:after {
     content: '';
     position: absolute;
     top:18px;
@@ -23,7 +29,7 @@
     border-top: 8px solid hsl(0, 0%, 27%);
   }
 
-  &.is-open:after {
+  .selectbox.is-open &:after {
     top: 16px;
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
@@ -32,14 +38,7 @@
   }
 }
 
-.selectbox__selected {
-  color: hsl(134, 100%, 29%);
-  line-height: 20px;
-  padding: 10px;
-  height: 20px;
-}
-
-.selectbox__menu {
+.menu {
   box-sizing: border-box;
   position: absolute;
   overflow: hidden;
@@ -48,17 +47,15 @@
   transition: all ease 0.5s;
   width: 100%;
   background-color: hsl(0, 0%, 100%);
-  border: 1px solid transparent;
   max-height: 0;
 
   .selectbox.is-open & {
     max-height: 300px;
-    border: 1px solid hsl(0, 0%, 87%);
     box-shadow: 0 1px 3px hsla(0, 0%, 0%, .2);
   }
 }
 
-.selectbox__option {
+.menu__item {
   border-bottom: 1px solid hsl(0, 0%, 87%);
   color: hsl(0, 0%, 33%);
   transition: all ease 0.25s;
